Menu - fixed issue with help menu alignment, adjusted shadow CSS

--- a/www/css/fpp-bootstrap/src/fpp-bootstrap.scss
+++ b/www/css/fpp-bootstrap/src/fpp-bootstrap.scss
@@ -300,7 +300,7 @@ input[type=checkbox]:checked{
     padding:2em 2.5em;
 }
 .dropdown-menu.show{
-    box-shadow: 5px 5px 55px rgba(0,0,0,0.15);
+    box-shadow: 0px 5px 10px rgba(0,0,0,0.4);
     border-radius: 7px;
     border:none;
 }
